--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
